feat: add minimal shloka page
